--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "types": ["arconnect"]
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
